src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>DD_Age_Range__c</fullName>
        <label>Age Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Availability__c</fullName>
        <label>Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Values To Be Provided</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DD_Closes_At__c</fullName>
        <label>Closes At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_County__c</fullName>
        <label>County</label>
        <picklist>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Castle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sussex</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Date_Registered__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Disadvantaged_Business_Enterprise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disadvantaged Business Enterprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DD_Emergency_Provider__c</fullName>
        <label>Emergency Provider</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Enforcement_Action__c</fullName>
        <label>Enforcement Action</label>
        <picklist>
            <picklistValues>
                <fullName>Warning of Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revoked</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Enrollment__c</fullName>
        <label>Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DD_FEIN__c</fullName>
        <label>FEIN</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DD_Facility_Type__c</fullName>
        <label>Facility Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alleged Unlicensed Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed Child Care Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed Child Placing Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed Family Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed Large Family Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed Residential Child Care Facility and Day Treatment Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Exempt Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Fire_Marshal__c</fullName>
        <label>Fire Marshal</label>
        <picklist>
            <picklistValues>
                <fullName>City of Dover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of Middletown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of Newark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of New Castle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of Wilmington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State of Delaware</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_GTF_Level__c</fullName>
        <label>GTF Level</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Identification_Numbers__c</fullName>
        <label>Identification Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Minority_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minority Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Non_Profit_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Profit Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Opens_At__c</fullName>
        <label>Opens At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_PREA_Indicator__c</fullName>
        <label>PREA Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Provider_Association__c</fullName>
        <label>Provider Association</label>
        <picklist>
            <picklistValues>
                <fullName>Office of Child Care Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Private Agency</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DD_Provider_Id__c</fullName>
        <displayFormat>PROV-{000000}</displayFormat>
        <label>Provider Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DD_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal License Exempt</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Summer_Camp_Capacity__c</fullName>
        <label>Summer Camp Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DD_Veteran_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veteran Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Website_Address__c</fullName>
        <label>Website Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Woman_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Woman Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Worker_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Worker Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DD_Provider_Worker</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>DD_Provider_Id__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>DD_First_Name__c</columns>
        <columns>DD_Status__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.DD_Parent_Organization</value>
        </filters>
        <label>All Providers</label>
    </listViews>
    <listViews>
        <fullName>DD_Provider_Par_Org</fullName>
        <columns>DD_Provider_Id__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>DD_First_Name__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>DD_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.DD_Parent_Organization</value>
        </filters>
        <label>Parent Organizations</label>
    </listViews>
    <recordTypes>
        <fullName>DD_DFC_Foster_Care_Inquiry</fullName>
        <active>true</active>
        <description>For creating an Inquiry record to create an FC Private Agency</description>
        <label>DFC Foster Care Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>DD_DFC_Foster_Care_Private_Agency</fullName>
        <active>true</active>
        <description>For Foster Case Private Agency Providers</description>
        <label>DFC Foster Care Private Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>DD_DFS_OCCL_Provider</fullName>
        <active>true</active>
        <description>For OCCL Providers</description>
        <label>DFS OCCL Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>DD_Parent_Organization</fullName>
        <active>true</active>
        <description>To capture information pertinent to Parent Organization Providers</description>
        <label>Parent Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>DMSS_Provider</fullName>
        <active>true</active>
        <description>To capture information pertinent to DMSS Provider</description>
        <label>DMSS Provider</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DD_FEIN_Numeric_Value_Check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNUMBER( DD_FEIN__c ))</errorConditionFormula>
        <errorDisplayField>DD_FEIN__c</errorDisplayField>
        <errorMessage>Only numeric values can be entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DD_Provider_Parent_Org_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(TEXT( DD_Facility_Type__c ) &lt;&gt; &quot;Licensed Child Care Center&quot;)  &amp;&amp; (TEXT( DD_Facility_Type__c ) &lt;&gt; &quot;Licensed Child Placing Agency&quot;) &amp;&amp; (TEXT( DD_Facility_Type__c ) &lt;&gt; &quot;Licensed Residential Child Care Facility and Day Treatment Program&quot;) &amp;&amp; NOT(ISBLANK( ParentId ))</errorConditionFormula>
        <errorMessage>You cannot add Parent Org for the selected Facility Type.</errorMessage>
    </validationRules>
</CustomObject>